Complete initial Fabric 1.20.1 source backport